feat: add wrapper

--- a/index.html
+++ b/index.html
@@ -8,77 +8,77 @@
     <title>Document</title>
 </head>
 <body>
-
-
-  <header class="header"> 
-    <h1 class="header__logo"></h1>
-    <nav class="header__menu">
-      <ul class="menu">
-        <li class="menu__items_selected"><a href="" class="menu__links"></a></li>
-        <li class="menu__items"><a href="" class="menu__links"></a></li>
-        <li class="menu__items"><a href="" class="menu__links"></a></li>
-        <li class="menu__items"><a href="" class="menu__links"></a></li>
-        <li class="menu__items"><a href="" class="menu__links"></a></li>
-        <li class="menu__items"><a href="" class="menu__links"></a></li>
-      </ul>
-    </nav>
-    <a class="header__phone" href="" ></a>    
-    <button class="header__call"></button>
-  </header>
-  <main class="content">
-    <section class="home">
-      <div class="home__social"></div>
-      <div class="home__banner"></div>
-      <div class="home__scroll"></div>
-    </section>
-    <section class="projects">
-      <div class="projects__completed-projects"></div>
-      <div class="projects__slider"></div>
-      <div class="projects__video"></div>
-      <div class="promotion"></div>
-    </section>
-    <section class="repair">
-      <div class="repair__promotion"></div>
-      <div class="repair__promotion"></div>
-      <div class="repair__promotion"></div>
-    </section>
-    <section class="measurement">
-      <div class="measurement__graph"></div>
-      <div class="measurement__form"></div>
-    </section>
-    <section class="portfolio">
-      <div class="porfolio__main-content"></div>
-      <div class="portfolio__popup"></div>
-    </section>
-    <section class="team">
-      <div class="team__staff"></div>   
-      <div class="team__staff"></div> 
-      <div class="team__staff"></div>    
-    </section>
-    <section class="review">
-      <div class="review__person"></div>
-      <div class="review__person"></div>
-      <div class="review__person"></div>
-    </section>
-    <section class="contacts">
-      <div class="contacts__form"></div>
-      <div class="contacts__map"></div>
-    </section>
-    <footer class="footer">
-        <span class="footer__logo"></span>
-        <nav class="footer__menu">
-          <ul class="menu-footer">
-            <li class="menu-footer__items_selected"><a href="" class="menu-footer__links"></a></li>
-            <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-            <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-            <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-            <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-            <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-          </ul>
-        </nav>
-        <a class="footer__phone" href=""></a>    
-        <button class="footer__call"></button>
-    </footer>
-  </main>    
+  <div class="wrapper">
+      <header class="header"> 
+          <h1 class="header__logo"></h1>
+          <nav class="header__menu">
+            <ul class="menu">
+              <li class="menu__items_selected"><a href="" class="menu__links"></a></li>
+              <li class="menu__items"><a href="" class="menu__links"></a></li>
+              <li class="menu__items"><a href="" class="menu__links"></a></li>
+              <li class="menu__items"><a href="" class="menu__links"></a></li>
+              <li class="menu__items"><a href="" class="menu__links"></a></li>
+              <li class="menu__items"><a href="" class="menu__links"></a></li>
+            </ul>
+          </nav>
+          <a class="header__phone" href="" ></a>    
+          <button class="header__call"></button>
+        </header>
+        <main class="content">
+          <section class="home">
+            <div class="home__social"></div>
+            <div class="home__banner"></div>
+            <div class="home__scroll"></div>
+          </section>
+          <section class="projects">
+            <div class="projects__completed-projects"></div>
+            <div class="projects__slider"></div>
+            <div class="projects__video"></div>
+            <div class="promotion"></div>
+          </section>
+          <section class="repair">
+            <div class="repair__promotion"></div>
+            <div class="repair__promotion"></div>
+            <div class="repair__promotion"></div>
+          </section>
+          <section class="measurement">
+            <div class="measurement__graph"></div>
+            <div class="measurement__form"></div>
+          </section>
+          <section class="portfolio">
+            <div class="porfolio__main-content"></div>
+            <div class="portfolio__popup"></div>
+          </section>
+          <section class="team">
+            <div class="team__staff"></div>   
+            <div class="team__staff"></div> 
+            <div class="team__staff"></div>    
+          </section>
+          <section class="review">
+            <div class="review__person"></div>
+            <div class="review__person"></div>
+            <div class="review__person"></div>
+          </section>
+          <section class="contacts">
+            <div class="contacts__form"></div>
+            <div class="contacts__map"></div>
+          </section>
+          <footer class="footer">
+              <span class="footer__logo"></span>
+              <nav class="footer__menu">
+                <ul class="menu-footer">
+                  <li class="menu-footer__items_selected"><a href="" class="menu-footer__links"></a></li>
+                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
+                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
+                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
+                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
+                  <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
+                </ul>
+              </nav>
+              <a class="footer__phone" href=""></a>    
+              <button class="footer__call"></button>
+          </footer>
+        </main>    
+  </div>  
 </body>
 </html>
