feat: add header, normalize

--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>Document</title>
 </head>
 <body>
   <div class="wrapper">
       <header class="header"> 
-          <h1 class="header__logo"></h1>
+          <h1 class="header__logo">IC "Repair Design Project</h1>
           <nav class="header__menu">
             <ul class="menu">
-              <li class="menu__items_selected"><a href="" class="menu__links"></a></li>
-              <li class="menu__items"><a href="" class="menu__links"></a></li>
-              <li class="menu__items"><a href="" class="menu__links"></a></li>
-              <li class="menu__items"><a href="" class="menu__links"></a></li>
-              <li class="menu__items"><a href="" class="menu__links"></a></li>
-              <li class="menu__items"><a href="" class="menu__links"></a></li>
+              <li class="menu__items menu__items--selected"><a href="" class="menu__links">home</a></li>
+              <li class="menu__items"><a href="#" class="menu__links">projects</a></li>
+              <li class="menu__items"><a href="" class="menu__links">measurement</a></li>
+              <li class="menu__items"><a href="" class="menu__links">team</a></li>
+              <li class="menu__items"><a href="" class="menu__links">reviews</a></li>
+              <li class="menu__items"><a href="" class="menu__links">contacts</a></li>
             </ul>
           </nav>
-          <a class="header__phone" href="" ></a>    
-          <button class="header__call"></button>
+          <a class="header__phone" href="tel:" >+7 (928) 768-32-39</a>    
+          <button class="header__call">Request a call</button>
         </header>
         <main class="content">
           <section class="home">
