--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
   <div class="wrapper">
       <header class="header"> 
-          <h1 class="header__logo">IC "Repair Design Project</h1>
-          <nav class="header__menu">
+        <div class="home">
+          <h1 class="home__logo">IC "Repair Design Project</h1>
+          <nav class="home__menu">
             <ul class="menu">
               <li class="menu__items menu__items--selected"><a href="" class="menu__links">home</a></li>
               <li class="menu__items"><a href="#" class="menu__links">projects</a></li>
@@ -22,14 +23,26 @@
               <li class="menu__items"><a href="" class="menu__links">contacts</a></li>
             </ul>
           </nav>
-          <a class="header__phone" href="tel:" >+7 (928) 768-32-39</a>    
-          <button class="header__call">Request a call</button>
+          <a class="home__phone" href="tel:" >+7 (928) 768-32-39</a>    
+          <button class="home__call">Request a call</button>
+        </div>  
         </header>
         <main class="content">
-          <section class="home">
-            <div class="home__social"></div>
-            <div class="home__banner"></div>
-            <div class="home__scroll"></div>
+          <section class="banner">
+            <div class="banner__social">
+              <a class="social-link" href="http://instagram.com/"></a>
+            </div>
+            <div class="banner__banner">
+              <span class="banner-title">Turnkey Repair in the city of
+                <span class="banner-title--colored">Rostov-on-Don</span>
+              </span>
+              <span class="banner-promo">Get ready-made turnkey repairs on time <br> with work time saving up to 45 days and 20% from cost of materials due to the organization of work</span>
+              <button class="banner-calculate btn">CALCULATE THE COST</button>
+              <button class="banner-submit btn">SUBMIT YOUR APPLICATION</button>
+              <div class="banner-scroll">
+                <span class="scroll-txt">Scroll down</span>
+              </div>
+            </div>            
           </section>
           <section class="projects">
             <div class="projects__completed-projects"></div>
