feat: add types of repair part

--- a/index.html
+++ b/index.html
@@ -94,11 +94,68 @@
                 <label class="label-name form-label">Name<input class="input-name form-input" type="text" placeholder="What is your name:" required></label>                
                 <label class="label-name form-labe" >Phone<input class="input-phone form-input" type="tel" placeholder="Your phone number:" required></label>
                 <input class="input-submit" type="submit" value="submit">               
-                <label class="checkbox-text form-labe"><input  class="checkbox-marker form-input" type="checkbox" required>I agree to the processing of personal data</span>
+                <label class="checkbox-text form-labe"><input  class="checkbox-marker form-input" type="checkbox" required>I agree to the processing of personal data</label>
               </form>
             </div>
-            <div class="repair__types"></div>
-            <div class="repair__promotion"></div>
+            <div class="repair__types">
+              <span class="repair-sign">TYPES OF REPAIR</span>
+              <div class="repair-examples">
+                <div class="repair-examples__item">
+                  <img class="item-image" src="assets/img/redecorating.png"  width="392" height="421" alt="redecorating">
+                  <div class="item-list">
+                    <span class="list-title">Redecorating</span>
+                    <ul class="list-points">
+                      <li class="points">Dismantling of old coatings</li>
+                      <li class="points">Wallpapering</li>
+                      <li class="points">Painting walls and ceilings</li>
+                      <li class="points">Laying flooring</li>
+                      <li class="points">Replacing plumbing</li>
+                      <li class="points">Replacing sockets and switches</li>
+                      <li class="points">Replacing doors</li>
+                    </ul>                     
+                  </div>
+                  <span class="item-price">from 900 rub / m2</span>
+                </div>
+                <div class="repair-examples__item">
+                    <img class="item-image" src="assets/img/overhaul.png"  width="392" height="421" alt="redecorating">
+                    <div class="item-list">
+                      <span class="list-title">Redecorating</span>
+                      <ul class="list-points">
+                        <li class="points">Dismantling of old coatings</li>
+                        <li class="points">Wallpapering</li>
+                        <li class="points">Painting walls and ceilings</li>
+                        <li class="points">Laying flooring</li>
+                        <li class="points">Replacing plumbing</li>
+                        <li class="points">Replacing sockets and switches</li>
+                        <li class="points">Replacing doors</li>
+                      </ul>                     
+                    </div>
+                    <span class="item-price">from 1800 rub / m2</span>
+                  </div>
+                  <div class="repair-examples__item">
+                      <img class="item-image" src="assets/img/repair.png"  width="392" height="421" alt="redecorating">
+                      <div class="item-list">
+                        <span class="list-title">Redecorating</span>
+                        <ul class="list-points">
+                          <li class="points">Dismantling of old coatings</li>
+                          <li class="points">Wallpapering</li>
+                          <li class="points">Painting walls and ceilings</li>
+                          <li class="points">Laying flooring</li>
+                          <li class="points">Replacing plumbing</li>
+                          <li class="points">Replacing sockets and switches</li>
+                          <li class="points">Replacing doors</li>
+                        </ul>                     
+                      </div>
+                      <span class="item-price">from 4000 rub / m2</span>
+                    </div>
+              </div>
+            </div>
+            <div class="repair__promotion">
+              <div class="promotion-elipse">
+                
+              </div>
+              <div class="promotion-from"></div>
+            </div>
             
           </section>
           <section class="measurement">
