--- a/index.html
+++ b/index.html
@@ -152,9 +152,35 @@
             </div>
             <div class="repair__promotion">
               <div class="promotion-elipse">
-                
+                <div class="promotion-point">
+                  <span class="promotion-num">01</span>
+                  <span class="promotion-num-text">Our specialist will arrive for measurements per day contact, or appoint a date convenient for you</span>
+                </div>
+                <div class="promotion-point">
+                    <span class="promotion-num">02</span>
+                    <span class="promotion-num-text">Free metering</span>
+                  </div>
+                  <div class="promotion-point">
+                      <span class="promotion-num">03</span>
+                      <span class="promotion-num-text">Free consultation</span>
+                    </div>  
+                <div class="promotion-point">
+                  <span class="promotion-num">04</span>
+                  <span class="promotion-num-text">Get a cost estimate and the timing of your future repairs </span>
+                </div> 
+
               </div>
-              <div class="promotion-from"></div>
+              <div class="promotion-from">
+                <form action="#" class="submit-form">
+                  <span class="submit-span">Leave a request for free departure of the measurer</span>
+                  <label class="label-name form-label">Name<input class="input-name form-input" type="text" placeholder="What is your name:" required></label>                
+                  <label class="label-phone form-label" >Phone<input class="input-phone form-input" type="tel" placeholder="Your phone number:" required></label>
+                  <label class="label-mail form-label" >Email<input class="input-mail form-input" type="email" placeholder="Your email:" required></label>                                
+                  <label class="checkbox-text form-label"><input  class="checkbox-from form-input" type="checkbox" required>I agree to the processing of personal data</label>
+                  <input class="input-submit" type="submit" value="Call the measurer"> 
+                </form>               
+                <span class="promotion-discount">Help save 10 - 20% of the cost of materials</span>                
+              </div>
             </div>
             
           </section>
@@ -183,14 +209,14 @@
           <footer class="footer">
               <span class="footer__logo"></span>
               <nav class="footer__menu">
-                <ul class="menu-footer">
+                <!-- <ul class="menu-footer">
                   <li class="menu-footer__items_selected"><a href="" class="menu-footer__links"></a></li>
                   <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
                   <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
                   <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
                   <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
                   <li class="menu-footer__items"><a href="" class="menu-footer__links"></a></li>
-                </ul>
+                </ul> -->
               </nav>
               <a class="footer__phone" href=""></a>    
               <button class="footer__call"></button>
