feat: add gallery block

--- a/index.html
+++ b/index.html
@@ -184,9 +184,33 @@
             </div>
             
           </section>
-          <section class="measurement">
-            <div class="measurement__graph"></div>
-            <div class="measurement__form"></div>
+          <section class="pattern">
+            <div class="pattern-list">
+              <span class="pattern-list__text">We realize your wildest fantasies</span>
+              <ul class="pattern-list__items">
+                <li class="list-item"><a href="#" class="list-link">American classic</a></li>
+                <li class="list-item"><a href="#" class="list-link">Empire</a></li>
+                <li class="list-item"><a href="#" class="list-link">Classical</a></li>
+                <li class="list-item"><a href="#" class="list-link">Loft</a></li>
+                <li class="list-item"><a href="#" class="list-link">Minimalism</a></li>
+                <li class="list-item"><a href="#" class="list-link">Provence</a></li>
+                <li class="list-item"><a href="#" class="list-link">Romanticism</a></li>
+                <li class="list-item"><a href="#" class="list-link">Scandinavian style</a></li>
+                <li class="list-item"><a href="#" class="list-link">Mediterranean style</a></li>
+                <li class="list-item"><a href="#" class="list-link">High tech</a></li>
+                <li class="list-item"><a href="#" class="list-link">Eclecticism</a></li>
+              </ul>
+            </div>
+            <div class="pattern-gallery">
+              <div class="pattern-gallery__line">
+                <img class="gallery-img" src="assets/img/classic_1.png" height="557" width="354" alt="american classic">
+                <img class="gallery-img" src="assets/img/classic_2.png"   height="349" width="354" alt="american classic">
+              </div>
+              <div class="pattern-gallery__line">
+                  <img class="gallery-img" src="assets/img/classic_3.png" height="275" width="354" alt="american classic">
+                  <img class="gallery-img" src="assets/img/classic_4.png" height="625" width="354" alt="american classic">                  
+                </div>
+            </div>            
           </section>
           <section class="portfolio">
             <div class="porfolio__main-content"></div>
