feat: add design-project section

--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                       <li class="points">Replacing plumbing</li>
                       <li class="points">Replacing sockets and switches</li>
                       <li class="points">Replacing doors</li>
-                    </ul>                     
+                    </ul> 
+                    <span class="item-price">from 900 rub / m2</span>                    
                   </div>
-                  <span class="item-price">from 900 rub / m2</span>
+                  
                 </div>
                 <div class="repair-examples__item">
                     <img class="item-image" src="assets/img/overhaul.png"  width="392" height="421" alt="redecorating">
@@ -128,9 +129,9 @@
                         <li class="points">Replacing plumbing</li>
                         <li class="points">Replacing sockets and switches</li>
                         <li class="points">Replacing doors</li>
-                      </ul>                     
-                    </div>
-                    <span class="item-price">from 1800 rub / m2</span>
+                      </ul>    
+                      <span class="item-price">from 1800 rub / m2</span>                
+                    </div>                   
                   </div>
                   <div class="repair-examples__item">
                       <img class="item-image" src="assets/img/repair.png"  width="392" height="421" alt="redecorating">
@@ -144,9 +145,9 @@
                           <li class="points">Replacing plumbing</li>
                           <li class="points">Replacing sockets and switches</li>
                           <li class="points">Replacing doors</li>
-                        </ul>                     
-                      </div>
-                      <span class="item-price">from 4000 rub / m2</span>
+                        </ul> 
+                        <span class="item-price">from 4000 rub / m2</span>                    
+                      </div>                     
                     </div>
               </div>
             </div>
@@ -168,7 +169,6 @@
                   <span class="promotion-num">04</span>
                   <span class="promotion-num-text">Get a cost estimate and the timing of your future repairs </span>
                 </div> 
-
               </div>
               <div class="promotion-from">
                 <form action="#" class="submit-form">
@@ -181,8 +181,7 @@
                 </form>               
                 <span class="promotion-discount">Help save 10 - 20% of the cost of materials</span>                
               </div>
-            </div>
-            
+            </div>            
           </section>
           <section class="pattern">
             <div class="pattern-list">
@@ -212,9 +211,63 @@
                 </div>
             </div>            
           </section>
-          <section class="portfolio">
-            <div class="porfolio__main-content"></div>
-            <div class="portfolio__popup"></div>
+          <section class="design-project">
+            <div class="design-upper">
+            <span class="design-sign">design project</span>
+            <p class="design-text">Design project not only helps to make the repair of your apartment more modern, but also significantly reduces the cost of materials and reduces the time of repair work.</p>
+            <div class="repair-examples">
+                <div class="repair-examples__item">
+                  <img class="item-image" src="assets/img/redecorating.png"  width="392" height="421" alt="redecorating">
+                  <div class="item-list">
+                    <span class="list-title">Mini</span>
+                    <ul class="list-points">                     
+                      <li class="points">Measurement drawing</li>
+                      <li class="points">Redevelopment</li>
+                      <li class="points">Layout of furniture</li>
+                      <li class="points">Plumbing plan equipment</li>                      
+                    </ul> 
+                    <span class="item-price">150 rub / m2</span>                    
+                  </div>                  
+                </div>
+                <div class="repair-examples__item">
+                    <img class="item-image" src="assets/img/repair.png"  width="392" height="421" alt="redecorating">
+                    <div class="item-list">
+                      <span class="list-title">Standard</span>
+                      <ul class="list-points">
+                        <li class="points">Measurement drawing</li>
+                        <li class="points">Redevelopment</li>
+                        <li class="points">Layout of furniture</li>
+                        <li class="points">Plan of ceilings</li> 
+                        <li class="points">Floor Plan</li>
+                        <li class="points">Electricians plan</li>
+                        <li class="points">Lighting plan</li>
+                      </ul>    
+                      <span class="item-price">400 rub / m2</span>                
+                    </div>                   
+                  </div>
+                  <div class="repair-examples__item">
+                      <img class="item-image" src="assets/img/full.png"  width="392" height="421" alt="redecorating">
+                      <div class="item-list">
+                        <span class="list-title">Full</span>
+                        <ul class="list-points">
+                            <li class="points">Measurement drawing</li>
+                            <li class="points">Redevelopment</li>
+                            <li class="points">Layout of furniture</li>
+                            <li class="points">Plan of ceilings</li> 
+                            <li class="points">Floor Plan</li>
+                            <li class="points">Electricians plan</li>
+                            <li class="points">Lighting plan</li>
+                            <li class="points">Wall reamers</li>
+                            <li class="points">3D visualization</li>
+                            <li class="points">Bill of materials</li>
+                            <li class="points"> Departure for a selection of materials</li>
+                            <li class="points">Furniture selection</li>
+                        </ul> 
+                        <span class="item-price">900 rub / m2</span>                    
+                      </div>                     
+                    </div>
+              </div>          
+            </div>
           </section>
           <section class="team">
             <div class="team__staff"></div>   
