feat: add part of goal section

--- a/index.html
+++ b/index.html
@@ -269,10 +269,36 @@
               </div>          
             </div>
           </section>
-          <section class="team">
-            <div class="team__staff"></div>   
-            <div class="team__staff"></div> 
-            <div class="team__staff"></div>    
+          <section class="goal">            
+              <div class="goal-info">
+                <span class="goal-info__header">How we are working</span>
+                <span class="goal-info__title">6 steps to the goal</span>
+                <span class="goal-info__slider-counter">1/6</span>
+                <span class="goal-info__subtitle">Departure for measurements premises</span>
+                <p class="goal-info__text">After your call, we go to you to consult and measure the premises of your apartment. During our meeting, you can ask absolutely any number of questions. An appraiser-appraiser leaves to measure the room. <br><br>He will advise you on the issues of repair technology, apartment design, terms of repair of the apartment as a whole and its individual stages.</p>
+                <div class="slider-switcher">
+                  <span class="slider-switcher__switcher-prev"></span>
+                  <span class="slider-switcher__point slider-switcher__point_active"></span>
+                  <span class="slider-switcher__point"></span>
+                  <span class="slider-switcher__point"></span>
+                  <span class="slider-switcher__point"></span>
+                  <span class="slider-switcher__point"></span>
+                  <span class="slider-switcher__point"></span>                  
+                  <span class="slider-switcher__switcher-next"></span>
+                </div> 
+              </div>
+              <div class="goal-steps">
+                <div class="goal-steps__grid steps">
+                  <span class="steps__number">01<span class="steps__target"></span>Departure to room measurements</span>
+                  <span class="steps__number">02<span class="steps__target"></span>Compilation estimates</span>
+                  <span class="steps__number">03<span class="steps__target"></span>Development project design</span>
+                  <span class="steps__number">04<span class="steps__target"></span>Purchasing Supplies</span>
+                  <span class="steps__number">05<span class="steps__target"></span>Repair finishing work</span>
+                  <span class="steps__number">06<span class="steps__target"></span>Приемка-сдача работ</span>
+                </div>
+                <img src="assets/img/goal-img.png" alt="" class="goal-steps__image">
+              </div>
+           
           </section>
           <section class="review">
             <div class="review__person"></div>
