feat: add team section

--- a/index.html
+++ b/index.html
@@ -300,10 +300,45 @@
               </div>
            
           </section>
-          <section class="review">
-            <div class="review__person"></div>
-            <div class="review__person"></div>
-            <div class="review__person"></div>
+          <section class="team-review">
+            <div class="team">
+              <span class="team-sign">our team</span>
+              <span class="team-text">Our team has helped to become happier for more than 500 families and we are not going to stop</span>
+              <div class="staff">
+                <div class="employee">
+                  <div class="employee__skill"></div>                  
+                  <div class="employee__card">
+                    <div class="employee__name">Dmitry tulyakov</div>
+                    <div class="employee__position"> Project manager</div>             
+                    <div class="employee__exp">Work experience 8 years</div>          
+                  </div>
+                </div>
+                <div class="employee">
+                    <div class="employee__skill"></div>                  
+                    <div class="employee__card">
+                      <div class="employee__name">Larisa Kotlyarova</div>
+                      <div class="employee__position">Designer</div>             
+                      <div class="employee__exp">Work experience 6 years</div>          
+                    </div>
+                </div>
+                <div class="employee">
+                    <div class="employee__skill"></div>                  
+                    <div class="employee__card">
+                      <div class="employee__name">Alexey Efimov</div>
+                      <div class="employee__position">Foreman</div>             
+                      <div class="employee__exp">Work experience 12 years</div>
+                    </div>                    
+                </div>
+             
+              </div>
+              <div class="team-desc">
+                  <p class="team-desc__text">
+                     Each employee of our company is a qualified full-time specialist with work experience of 6 years.
+                  </p>
+                  <p class="team-desc__text"> We do not have laborers and guest workers, each employee carries out work corresponding to his specialty</p>
+                </div> 
+            </div>
+            <div class="review"></div>           
           </section>
           <section class="contacts">
             <div class="contacts__form"></div>
