feat: add reviews block

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   <span class="steps__number">03<span class="steps__target"></span>Development project design</span>
                   <span class="steps__number">04<span class="steps__target"></span>Purchasing Supplies</span>
                   <span class="steps__number">05<span class="steps__target"></span>Repair finishing work</span>
-                  <span class="steps__number">06<span class="steps__target"></span>Приемка-сдача работ</span>
+                  <span class="steps__number">06<span class="steps__target"></span>Acceptance of work</span>
                 </div>
                 <img src="assets/img/goal-img.png" alt="" class="goal-steps__image">
               </div>
@@ -328,8 +328,7 @@
                       <div class="employee__position">Foreman</div>             
                       <div class="employee__exp">Work experience 12 years</div>
                     </div>                    
-                </div>
-             
+                </div>             
               </div>
               <div class="team-desc">
                   <p class="team-desc__text">
@@ -337,8 +336,47 @@
                   </p>
                   <p class="team-desc__text"> We do not have laborers and guest workers, each employee carries out work corresponding to his specialty</p>
                 </div> 
-            </div>
-            <div class="review"></div>           
+             </div>   
+
+            <div class="review">
+              <span class="review-sign">our clients</span>
+              <span class="review-text">80% of our customers recommend us to their friends and family.</span>
+              <div class="review-container">
+                <div class="review-block">
+                  <div class="review-block__owner">
+                    <div class="review-block__photo"></div>
+                    <span class="review-block__name">Fedosova Maria Konstantinovna</span>          
+                  </div>
+                  <p class="review-block__text">I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i referred to the repair as to my own. Great thanks i express the project to georgia for its professionalism and approach. The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. prices democratic. I recommend these masters.</p>
+                  <div class="review-block__result repare-result">
+                    <div class="repare-result__square">40 m2</div>
+                    <div class="repare-result__duration">48 days</div>
+                  </div>
+                </div>
+                <div class="review-block">
+                    <div class="review-block__owner">
+                      <div class="review-block__photo"></div>
+                      <span class="review-block__name">Afanasyev Sergey Alexandrovich</span>       
+                    </div>
+                    <p class="review-block__text">I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i referred to the repair as to my own. Great thanks i express the project to georgia for its professionalism and approach. The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. prices democratic. I recommend these masters.</p>
+                    <div class="review-block__result repare-result">
+                      <div class="repare-result__square">90 m2</div>
+                      <div class="repare-result__duration">128 days</div>
+                    </div>
+                  </div>
+                  <div class="review-block">
+                      <div class="review-block__owner">
+                        <div class="review-block__photo"></div>
+                        <span class="review-block__name">Kiriev Egor Leonidovich</span>       
+                      </div>
+                      <p class="review-block__text">I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i referred to the repair as to my own. Great thanks i express the project to georgia for its professionalism and approach. The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. prices democratic. I recommend these masters.</p>
+                      <div class="review-block__result repare-result">
+                        <div class="repare-result__square">56 m2</div>
+                        <div class="repare-result__duration">86 days</div>
+                      </div>
+                    </div>
+              </div>
+            </div>           
           </section>
           <section class="contacts">
             <div class="contacts__form"></div>
